<resources>
    <string name="app_name">Happy Weight Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="label_new">New Weight</string>
    <string name="label_history">History</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_weight_pager">Weight Pager</string>
    <string name="title_activity_chart">Weight Chart</string>


    <!-- Splash view string-->
    <string name="welcome">Welcome</string>
    <string name="splash_message">Track your weight, improve your health.</string>
    <!-- Navigation view string-->
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="navigation_summary">Summary</string>
    <string name="navigation_history">History</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_chart">Chart</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <!-- Strings on Buttons -->
    <string name="settings_button_save">Save Settings</string>
    <string name="settings_tv_cancel">Cancel</string>
    <string name="welcome_initial_setting">My Settings</string>
    <string name="welcome_go_summary">My Weight Summary</string>


    <!-- Strings on Summary screen-->
    <string name="tv_start_weight">Start:</string>
    <string name="tv_current_weight">Now:</string>
    <string name="tv_goal_weight">Goal:</string>
    <string name="tv_average_weight">(+/-) Average per week:</string>
    <string name="tv_bmi_label">BMI(Body-Mass-Index)</string>
    <string name="desc_bmi">
        Underweight = &lt; 18.5 | Normalweight = 18.5 - 24.9\nOverweight = 25.0 - 29.9 | Obesity = BMI of 30 or greater
    </string>
    <string name="title_activity_new_weight">New Weight</string>
    <string name="label_weight_loss_to_date">Weight Loss To Date: 10 LB</string>

    <!-- Strings on New Weight screen-->
    <string name="input_new_weight_hint">Weight</string>
    <string name="input_new_date_hint">Date</string>
    <string name="date_picker_title">Date of Weight:</string>
    <string name="number_picker_title">Weight Picker:</string>
    <string name="btn_save">Save Weight</string>

    <!-- Strings on Settings screen-->
    <string name="settings_label_profile">PROFILE</string>
    <string name="settings_gender">Gender:</string>
    <string name="settings_gender_male">Male</string>
    <string name="settings_gender_female">Female</string>
    <string name="settings_unit">Unit:</string>
    <string name="settings_unit_lb">LB/FT</string>
    <string name="settings_unit_kg">KG/CM</string>
    <string name="settings_language">Language:</string>
    <string name="settings_lang_en">English</string>
    <string name="settings_lang_ch">Chinese</string>
    <string name="settings_label_settings">SETTINGS</string>
    <string name="settings_height">Height(ft):</string>
    <string name="settings_start_weight">Start(lb):</string>
    <string name="settings_goal_weight">Goal(lb):</string>
    <string name="settings_target_date">Target Date</string>

</resources>
