<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/overview"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/navigation_summary"/>

        <item
            android:id="@+id/history"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/navigation_history" />

        <item
            android:id="@+id/setting"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/navigation_setting" />

    </group>
</menu>