<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#E1F5FE"
        tools:context="fang.weighttracker.Settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_label_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_gender"
                android:textSize="18sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/settings_rg_gender">
                <RadioButton
                    android:id="@+id/settings_radio_btn_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/settings_gender_male"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/settings_radio_btn_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_gender_female"
                    android:textSize="18sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_height"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings_et_height"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_start_weight"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings_et_start_weight"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_goal_weight"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings_et_goal_weight"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_target_date"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings_et_goal_date"
                android:editable="false"
                android:textSize="18sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_label_settings"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_unit"
                android:textSize="18sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/settings_rg_unit">
                <RadioButton
                    android:id="@+id/settings_radio_btn_lb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/settings_unit_lb"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/settings_radio_btn_kg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_unit_kg"
                    android:textSize="18sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_language"
                android:textSize="18sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/settings_rg_language">
                <RadioButton
                    android:id="@+id/settings_radio_btn_language_en"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/settings_lang_en"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/settings_radio_btn_language_ch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_lang_ch"
                    android:textSize="18sp"/>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/setting_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_save"
            android:background="@android:color/holo_green_light"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/settings_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_tv_cancel"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>