<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="fang.weighttracker.NewWeightFragment"
                tools:showIn="@layout/activity_new_weight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/input_new_date_hint"/>

        <TextView
            android:id="@+id/et_new_date_value"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18dp"
            android:background="@color/icons"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/input_new_weight_hint"/>

        <TextView
        android:id="@+id/et_new_weight_value"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:background="@color/icons"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text=" lbs"/>

    </LinearLayout>

    <include layout="@layout/view_camera"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/new_weight_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btn_delete_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Delete Weight"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@color/red"
            android:textSize="18sp"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>